Map now aligns correctly

--- a/src/components/LeftPane/LeftPane.module.scss
+++ b/src/components/LeftPane/LeftPane.module.scss
@@ -3,5 +3,5 @@
   width: 40%;
   padding: 20px;
   background: #383838;
-  float: left;
+  box-sizing: border-box;
 }
