--- a/src/components/Map/Map.module.scss
+++ b/src/components/Map/Map.module.scss
@@ -1,6 +1,5 @@
 .map {
   width: 60%;
   height: 100vh;
-  float: left;
   overflow: hidden;
 }
